<resources>
    <string name="app_name">lab01</string>
    <string name="TextViewA">A:</string>
    <string name="EnterValueOfA" />
    <string name="TextViewB">B:</string>
    <string name="EnterValueOfB" />
    <string name="TextViewResult">Result:</string>
    <string name="ViewValueOfResult" />
    <string name="SumButton">ADD</string>
    <string name="SubButton">SUB</string>
    <string name="MulButton">MUL</string>
    <string name="DivButton">DIV</string>
    <string name="SinButton">SIN</string>
    <string name="CosButton">COS</string>
    <string name="DegreeButton">Degree</string>
</resources>